--- a/src/app/order/components/order-list/order-list.component.html
+++ b/src/app/order/components/order-list/order-list.component.html
@@ -33,7 +33,7 @@
     <input matInput [formControl]="searchBy" name="search" placeholder="Rechercher" type="text" id="search" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
   </div>
   <div class="flex flex-row sm:justify-end sm:content-end sm:items-end sm:col-span-2">
-    <a mat-button mat-flat-button color="primary" (click)="goToOrderCreation()">Ajouter</a>
+    <a *ngIf="auth.hasAuthority('PGM')" mat-button mat-flat-button color="primary" (click)="goToOrderCreation()">Ajouter</a>
   </div>
 </div>
 <div class="flex items-center">
